# thesis-pitz-daily

./: .gitignore  LICENSE  pyproject.toml
data/CenterQdotMean/: Q_0_QdotMean.csv  Q_100_QdotMean.csv  Q_105_QdotMean.csv  Q_10_QdotMean.csv  Q_110_QdotMean.csv  Q_115_QdotMean.csv  Q_120_QdotMean.csv  Q_125_QdotMean.csv  Q_130_QdotMean.csv  Q_135_QdotMean.csv  Q_140_QdotMean.csv  Q_145_QdotMean.csv  Q_150_QdotMean.csv  Q_155_QdotMean.csv  Q_15_QdotMean.csv  Q_160_QdotMean.csv  Q_165_QdotMean.csv  Q_170_QdotMean.csv  Q_175_QdotMean.csv  Q_180_QdotMean.csv  Q_185_QdotMean.csv  Q_190_QdotMean.csv  Q_195_QdotMean.csv  Q_200_QdotMean.csv  Q_205_QdotMean.csv  Q_20_QdotMean.csv  Q_210_QdotMean.csv  Q_215_QdotMean.csv  Q_220_QdotMean.csv  Q_225_QdotMean.csv  Q_230_QdotMean.csv  Q_235_QdotMean.csv  Q_240_QdotMean.csv  Q_245_QdotMean.csv  Q_250_QdotMean.csv  Q_255_QdotMean.csv  Q_25_QdotMean.csv  Q_260_QdotMean.csv  Q_265_QdotMean.csv  Q_270_QdotMean.csv  (+18 more)
data/QVolMean/: Q_0_QVolMean.csv  Q_100_QVolMean.csv  Q_105_QVolMean.csv  Q_10_QVolMean.csv  Q_110_QVolMean.csv  Q_115_QVolMean.csv  Q_120_QVolMean.csv  Q_125_QVolMean.csv  Q_130_QVolMean.csv  Q_135_QVolMean.csv  Q_140_QVolMean.csv  Q_145_QVolMean.csv  Q_150_QVolMean.csv  Q_155_QVolMean.csv  Q_15_QVolMean.csv  Q_160_QVolMean.csv  Q_165_QVolMean.csv  Q_170_QVolMean.csv  Q_175_QVolMean.csv  Q_180_QVolMean.csv  Q_185_QVolMean.csv  Q_190_QVolMean.csv  Q_195_QVolMean.csv  Q_200_QVolMean.csv  (+34 more)
tests/: test_vertical_heat_sample.py
thesis_pitz_daily/: __main__.py  dependancies.py  sample_heat_gaussian.py  vertical_heat_sample.py
(+58 files in other folders)
