[tool.poetry]
name = "thesis-pitz-daily"
version = "0.1.0"
description = ""
authors = ["FaroukHai <60575260+FaroukHai@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "thesis_pitz_daily"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
