[tool.poetry]
name = "thesis-pitz-daily"
version = "0.1.0"
description = ""
authors = ["FaroukHai <60575260+FaroukHai@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "thesis_pitz_daily"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
mypy = "^1.3.0"
pytest = "^7.3.2"
pandas = "^2.0.2"
numpy = "^1.24.3"
pytest-mock = "^3.10.0"
scipy = "^1.10.1"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
